// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer renders only confirm button when endDateData does NOT include price.value 1`] = `
.emotion-2 {
  padding: 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:321px) {
  .emotion-0 {
    padding-right: 15px;
  }
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

.emotion-1 {
  font-family: "Ciutadella",sans-serif;
  font-size: 1rem;
  width: 100%;
  height: 3.125rem;
  border-radius: 4px;
  border-width: 0;
  padding: 14px 24px 15px;
  font-weight: 700;
  line-height: 1.56;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  cursor: pointer;
  background-color: #ee0000;
  color: #fff;
}

.emotion-1:active {
  -webkit-transform: translate(1px,1px);
  -ms-transform: translate(1px,1px);
  transform: translate(1px,1px);
  background-color: #ba0000;
}

.emotion-1:hover {
  background-color: #ba0000;
}

.emotion-3 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  width: 100%;
  position: fixed;
  bottom: 0;
  background-color: #fff;
  font-family: "Ciutadella",sans-serif;
  box-shadow: 0 -4px 6px 0 rgba(0,0,0,0.08);
}

<RunwayThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "extraLarge": "(min-width: 1200px)",
        "large": "(min-width: 960px)",
        "medium": "(min-width: 768px)",
      },
      "colours": Object {
        "black": "#000000",
        "darkGrey": "#626262",
        "darkerGrey": "#323232",
        "disabledGrey": "#fafafa",
        "dullGrey": "#b3b3b3",
        "grey": "#dadada",
        "highlights": "#8de2e0",
        "hightlightsLight": "#bff4f2",
        "hightlightsLighter": "#e8f7f7",
        "lightGrey": "#f4f5f6",
        "lighterGrey": "#eeeeee",
        "mediumDarkGrey": "#888888",
        "mediumGrey": "#3c3c3c",
        "mediumLightGrey": "#666666",
        "primary": "#ee0000",
        "primaryDark": "#ba0000",
        "transparent": "transparent",
        "warnings": "#ed710b",
        "white": "#fff",
      },
      "fontFamily": Object {
        "main": "\\"Ciutadella\\", sans-serif",
      },
      "fontSize": Object {
        "body": "1.125rem",
        "button": "1rem",
        "label": "1rem",
        "labelLarge": "1.375rem",
        "large": "2.25rem",
        "medium": "1.625rem",
        "small": "0.625rem",
      },
      "fontWeight": Object {
        "bold": 700,
        "regular": 400,
      },
      "highlightInvalidField": Object {
        "border": "solid 2px #ed710b",
        "borderRadius": "2px",
      },
      "layout": Object {
        "borderRadius": "4px",
        "containerMaxWidth": "1000px",
        "gutter": "15px",
        "iconSize": "32px",
        "links": Object {
          "gutter": "10px",
        },
        "paddingContainerMaxWidth": "1030px",
      },
      "letterSpacing": Object {
        "small": "-0.0625rem",
      },
      "mq": Object {
        "extraLarge": "@media only screen and (min-width: 1200px)",
        "large": "@media only screen and (min-width: 960px)",
        "medium": "@media only screen and (min-width: 768px)",
        "small": "@media only screen and (min-width: 321px)",
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "breakpoints": Object {
          "extraLarge": "(min-width: 1200px)",
          "large": "(min-width: 960px)",
          "medium": "(min-width: 768px)",
        },
        "colours": Object {
          "black": "#000000",
          "darkGrey": "#626262",
          "darkerGrey": "#323232",
          "disabledGrey": "#fafafa",
          "dullGrey": "#b3b3b3",
          "grey": "#dadada",
          "highlights": "#8de2e0",
          "hightlightsLight": "#bff4f2",
          "hightlightsLighter": "#e8f7f7",
          "lightGrey": "#f4f5f6",
          "lighterGrey": "#eeeeee",
          "mediumDarkGrey": "#888888",
          "mediumGrey": "#3c3c3c",
          "mediumLightGrey": "#666666",
          "primary": "#ee0000",
          "primaryDark": "#ba0000",
          "transparent": "transparent",
          "warnings": "#ed710b",
          "white": "#fff",
        },
        "fontFamily": Object {
          "main": "\\"Ciutadella\\", sans-serif",
        },
        "fontSize": Object {
          "body": "1.125rem",
          "button": "1rem",
          "label": "1rem",
          "labelLarge": "1.375rem",
          "large": "2.25rem",
          "medium": "1.625rem",
          "small": "0.625rem",
        },
        "fontWeight": Object {
          "bold": 700,
          "regular": 400,
        },
        "highlightInvalidField": Object {
          "border": "solid 2px #ed710b",
          "borderRadius": "2px",
        },
        "layout": Object {
          "borderRadius": "4px",
          "containerMaxWidth": "1000px",
          "gutter": "15px",
          "iconSize": "32px",
          "links": Object {
            "gutter": "10px",
          },
          "paddingContainerMaxWidth": "1030px",
        },
        "letterSpacing": Object {
          "small": "-0.0625rem",
        },
        "mq": Object {
          "extraLarge": "@media only screen and (min-width: 1200px)",
          "large": "@media only screen and (min-width: 960px)",
          "medium": "@media only screen and (min-width: 768px)",
          "small": "@media only screen and (min-width: 321px)",
        },
      }
    }
  >
    <Footer
      actionText="CONFIRM"
      bottomFooterDisclaimer="+ $34.90^"
      bottomFootersummaryLabel="From "
      endDateData={
        Object {
          "currencySymbol": "€",
          "price": null,
        }
      }
      onActionButtonClick={[Function]}
      preFooterDisclaimer="^ Taxes, fees and carrier charges. Limited avaliability"
      preFooterInfo="Lowest economy price per adult in AUD for a return trip."
      showBottomFooter={true}
      showPreFooter={true}
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={300}
        unmountOnExit={false}
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div>
              <ButtonSolid
                cssOverrides={
                  Array [
                    Object {
                      "borderRadius": "4px",
                      "borderWidth": "0",
                      "fontWeight": 400,
                      "height": "48px",
                      "letterSpacing": "1.5px",
                      "padding": "0 0 0 1px",
                      "width": "100px",
                    },
                  ]
                }
                disabled={false}
                inline={false}
                label="CONFIRM"
                onClick={[Function]}
                type="button"
              >
                <WithTheme(ThemedButton)
                  cssOverrides={
                    Array [
                      Object {
                        "borderRadius": "4px",
                        "borderWidth": "0",
                        "fontWeight": 400,
                        "height": "48px",
                        "letterSpacing": "1.5px",
                        "padding": "0 0 0 1px",
                        "width": "100px",
                      },
                    ]
                  }
                  disabled={false}
                  inline={false}
                  label="CONFIRM"
                  onClick={[Function]}
                  themeStyles={
                    Object {
                      "button": [Function],
                    }
                  }
                  type="button"
                >
                  <ThemedButton
                    cssOverrides={
                      Array [
                        Object {
                          "borderRadius": "4px",
                          "borderWidth": "0",
                          "fontWeight": 400,
                          "height": "48px",
                          "letterSpacing": "1.5px",
                          "padding": "0 0 0 1px",
                          "width": "100px",
                        },
                      ]
                    }
                    disabled={false}
                    inline={false}
                    label="CONFIRM"
                    onClick={[Function]}
                    theme={
                      Object {
                        "breakpoints": Object {
                          "extraLarge": "(min-width: 1200px)",
                          "large": "(min-width: 960px)",
                          "medium": "(min-width: 768px)",
                        },
                        "colours": Object {
                          "black": "#000000",
                          "darkGrey": "#626262",
                          "darkerGrey": "#323232",
                          "disabledGrey": "#fafafa",
                          "dullGrey": "#b3b3b3",
                          "grey": "#dadada",
                          "highlights": "#8de2e0",
                          "hightlightsLight": "#bff4f2",
                          "hightlightsLighter": "#e8f7f7",
                          "lightGrey": "#f4f5f6",
                          "lighterGrey": "#eeeeee",
                          "mediumDarkGrey": "#888888",
                          "mediumGrey": "#3c3c3c",
                          "mediumLightGrey": "#666666",
                          "primary": "#ee0000",
                          "primaryDark": "#ba0000",
                          "transparent": "transparent",
                          "warnings": "#ed710b",
                          "white": "#fff",
                        },
                        "fontFamily": Object {
                          "main": "\\"Ciutadella\\", sans-serif",
                        },
                        "fontSize": Object {
                          "body": "1.125rem",
                          "button": "1rem",
                          "label": "1rem",
                          "labelLarge": "1.375rem",
                          "large": "2.25rem",
                          "medium": "1.625rem",
                          "small": "0.625rem",
                        },
                        "fontWeight": Object {
                          "bold": 700,
                          "regular": 400,
                        },
                        "highlightInvalidField": Object {
                          "border": "solid 2px #ed710b",
                          "borderRadius": "2px",
                        },
                        "layout": Object {
                          "borderRadius": "4px",
                          "containerMaxWidth": "1000px",
                          "gutter": "15px",
                          "iconSize": "32px",
                          "links": Object {
                            "gutter": "10px",
                          },
                          "paddingContainerMaxWidth": "1030px",
                        },
                        "letterSpacing": Object {
                          "small": "-0.0625rem",
                        },
                        "mq": Object {
                          "extraLarge": "@media only screen and (min-width: 1200px)",
                          "large": "@media only screen and (min-width: 960px)",
                          "medium": "@media only screen and (min-width: 768px)",
                          "small": "@media only screen and (min-width: 321px)",
                        },
                      }
                    }
                    themeStyles={
                      Object {
                        "button": [Function],
                      }
                    }
                    type="button"
                  >
                    <button
                      className="emotion-1"
                      cssOverrides={
                        Array [
                          Object {
                            "borderRadius": "4px",
                            "borderWidth": "0",
                            "fontWeight": 400,
                            "height": "48px",
                            "letterSpacing": "1.5px",
                            "padding": "0 0 0 1px",
                            "width": "100px",
                          },
                        ]
                      }
                      disabled={false}
                      inline={false}
                      label="CONFIRM"
                      onClick={[Function]}
                      type="button"
                    >
                      button
                    </button>
                  </ThemedButton>
                </WithTheme(ThemedButton)>
              </ButtonSolid>
            </div>
          </div>
        </div>
      </Transition>
    </Footer>
  </ThemeProvider>
</RunwayThemeProvider>
`;

exports[`Footer renders preFooterDisclaimer and bottom footer text contents when endDateData includes price.value 1`] = `
.emotion-10 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  width: 100%;
  position: fixed;
  bottom: 0;
  background-color: #fff;
  font-family: "Ciutadella",sans-serif;
}

.emotion-9 {
  padding: 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:321px) {
  .emotion-7 {
    padding-right: 15px;
  }
}

@media only screen and (min-width:768px) {
  .emotion-7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

.emotion-5 {
  font-size: 1.125rem;
  line-height: 1.56;
}

@media only screen and (min-width:768px) {
  .emotion-5 {
    margin-right: 5px;
  }
}

.emotion-4 {
  color: #323232;
  font-weight: 700;
}

.emotion-6 {
  font-size: 0.875rem;
  line-height: 1.29;
  color: #626262;
}

@media only screen and (min-width:768px) {
  .emotion-6 {
    font-size: 1.125rem;
  }
}

.emotion-3 {
  border-bottom: 1px solid #eeeeee;
  -webkit-transition: -webkit-transform 300ms linear;
  -webkit-transition: transform 300ms linear;
  transition: transform 300ms linear;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  box-shadow: 0 -4px 6px 0 rgba(0,0,0,0.08);
  width: 100%;
  background-color: #fff;
}

.emotion-2 {
  padding: 7.5px 15px;
  width: 100%;
  max-width: 1030px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-0 {
  font-size: 0.875rem;
  line-height: 2;
  color: #323232;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    margin-right: 5px;
  }
}

.emotion-1 {
  font-size: 0.875rem;
  line-height: 1.29;
  color: #626262;
}

.emotion-8 {
  font-family: "Ciutadella",sans-serif;
  font-size: 1rem;
  width: 100%;
  height: 3.125rem;
  border-radius: 4px;
  border-width: 0;
  padding: 14px 24px 15px;
  font-weight: 700;
  line-height: 1.56;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  cursor: pointer;
  background-color: #ee0000;
  color: #fff;
}

.emotion-8:active {
  -webkit-transform: translate(1px,1px);
  -ms-transform: translate(1px,1px);
  transform: translate(1px,1px);
  background-color: #ba0000;
}

.emotion-8:hover {
  background-color: #ba0000;
}

<RunwayThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "extraLarge": "(min-width: 1200px)",
        "large": "(min-width: 960px)",
        "medium": "(min-width: 768px)",
      },
      "colours": Object {
        "black": "#000000",
        "darkGrey": "#626262",
        "darkerGrey": "#323232",
        "disabledGrey": "#fafafa",
        "dullGrey": "#b3b3b3",
        "grey": "#dadada",
        "highlights": "#8de2e0",
        "hightlightsLight": "#bff4f2",
        "hightlightsLighter": "#e8f7f7",
        "lightGrey": "#f4f5f6",
        "lighterGrey": "#eeeeee",
        "mediumDarkGrey": "#888888",
        "mediumGrey": "#3c3c3c",
        "mediumLightGrey": "#666666",
        "primary": "#ee0000",
        "primaryDark": "#ba0000",
        "transparent": "transparent",
        "warnings": "#ed710b",
        "white": "#fff",
      },
      "fontFamily": Object {
        "main": "\\"Ciutadella\\", sans-serif",
      },
      "fontSize": Object {
        "body": "1.125rem",
        "button": "1rem",
        "label": "1rem",
        "labelLarge": "1.375rem",
        "large": "2.25rem",
        "medium": "1.625rem",
        "small": "0.625rem",
      },
      "fontWeight": Object {
        "bold": 700,
        "regular": 400,
      },
      "highlightInvalidField": Object {
        "border": "solid 2px #ed710b",
        "borderRadius": "2px",
      },
      "layout": Object {
        "borderRadius": "4px",
        "containerMaxWidth": "1000px",
        "gutter": "15px",
        "iconSize": "32px",
        "links": Object {
          "gutter": "10px",
        },
        "paddingContainerMaxWidth": "1030px",
      },
      "letterSpacing": Object {
        "small": "-0.0625rem",
      },
      "mq": Object {
        "extraLarge": "@media only screen and (min-width: 1200px)",
        "large": "@media only screen and (min-width: 960px)",
        "medium": "@media only screen and (min-width: 768px)",
        "small": "@media only screen and (min-width: 321px)",
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "breakpoints": Object {
          "extraLarge": "(min-width: 1200px)",
          "large": "(min-width: 960px)",
          "medium": "(min-width: 768px)",
        },
        "colours": Object {
          "black": "#000000",
          "darkGrey": "#626262",
          "darkerGrey": "#323232",
          "disabledGrey": "#fafafa",
          "dullGrey": "#b3b3b3",
          "grey": "#dadada",
          "highlights": "#8de2e0",
          "hightlightsLight": "#bff4f2",
          "hightlightsLighter": "#e8f7f7",
          "lightGrey": "#f4f5f6",
          "lighterGrey": "#eeeeee",
          "mediumDarkGrey": "#888888",
          "mediumGrey": "#3c3c3c",
          "mediumLightGrey": "#666666",
          "primary": "#ee0000",
          "primaryDark": "#ba0000",
          "transparent": "transparent",
          "warnings": "#ed710b",
          "white": "#fff",
        },
        "fontFamily": Object {
          "main": "\\"Ciutadella\\", sans-serif",
        },
        "fontSize": Object {
          "body": "1.125rem",
          "button": "1rem",
          "label": "1rem",
          "labelLarge": "1.375rem",
          "large": "2.25rem",
          "medium": "1.625rem",
          "small": "0.625rem",
        },
        "fontWeight": Object {
          "bold": 700,
          "regular": 400,
        },
        "highlightInvalidField": Object {
          "border": "solid 2px #ed710b",
          "borderRadius": "2px",
        },
        "layout": Object {
          "borderRadius": "4px",
          "containerMaxWidth": "1000px",
          "gutter": "15px",
          "iconSize": "32px",
          "links": Object {
            "gutter": "10px",
          },
          "paddingContainerMaxWidth": "1030px",
        },
        "letterSpacing": Object {
          "small": "-0.0625rem",
        },
        "mq": Object {
          "extraLarge": "@media only screen and (min-width: 1200px)",
          "large": "@media only screen and (min-width: 960px)",
          "medium": "@media only screen and (min-width: 768px)",
          "small": "@media only screen and (min-width: 321px)",
        },
      }
    }
  >
    <Footer
      actionText="CONFIRM"
      bottomFooterDisclaimer="+ $34.90^"
      bottomFootersummaryLabel="From "
      endDateData={
        Object {
          "currencySymbol": "€",
          "price": Object {
            "value": 3000,
          },
        }
      }
      onActionButtonClick={[Function]}
      preFooterDisclaimer="^ Taxes, fees and carrier charges. Limited avaliability"
      preFooterInfo="Lowest economy price per adult in AUD for a return trip."
      showBottomFooter={true}
      showPreFooter={true}
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={300}
        unmountOnExit={false}
      >
        <div
          className="emotion-10"
        >
          <Transition
            appear={false}
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={false}
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-2"
              >
                <span
                  className="emotion-0"
                >
                  Lowest economy price per adult in AUD for a return trip.
                </span>
                <span
                  className="emotion-1"
                >
                  ^ Taxes, fees and carrier charges. Limited avaliability
                </span>
              </div>
            </div>
          </Transition>
          <div
            className="emotion-9"
          >
            <div
              className="emotion-7"
            >
              <span
                className="emotion-5"
              >
                From 
                <span
                  className="emotion-4"
                >
                  €3,000.00
                </span>
              </span>
              <span
                className="emotion-6"
              >
                + $34.90^
              </span>
            </div>
            <div>
              <ButtonSolid
                cssOverrides={
                  Array [
                    Object {
                      "borderRadius": "4px",
                      "borderWidth": "0",
                      "fontWeight": 400,
                      "height": "48px",
                      "letterSpacing": "1.5px",
                      "padding": "0 0 0 1px",
                      "width": "100px",
                    },
                  ]
                }
                disabled={false}
                inline={false}
                label="CONFIRM"
                onClick={[Function]}
                type="button"
              >
                <WithTheme(ThemedButton)
                  cssOverrides={
                    Array [
                      Object {
                        "borderRadius": "4px",
                        "borderWidth": "0",
                        "fontWeight": 400,
                        "height": "48px",
                        "letterSpacing": "1.5px",
                        "padding": "0 0 0 1px",
                        "width": "100px",
                      },
                    ]
                  }
                  disabled={false}
                  inline={false}
                  label="CONFIRM"
                  onClick={[Function]}
                  themeStyles={
                    Object {
                      "button": [Function],
                    }
                  }
                  type="button"
                >
                  <ThemedButton
                    cssOverrides={
                      Array [
                        Object {
                          "borderRadius": "4px",
                          "borderWidth": "0",
                          "fontWeight": 400,
                          "height": "48px",
                          "letterSpacing": "1.5px",
                          "padding": "0 0 0 1px",
                          "width": "100px",
                        },
                      ]
                    }
                    disabled={false}
                    inline={false}
                    label="CONFIRM"
                    onClick={[Function]}
                    theme={
                      Object {
                        "breakpoints": Object {
                          "extraLarge": "(min-width: 1200px)",
                          "large": "(min-width: 960px)",
                          "medium": "(min-width: 768px)",
                        },
                        "colours": Object {
                          "black": "#000000",
                          "darkGrey": "#626262",
                          "darkerGrey": "#323232",
                          "disabledGrey": "#fafafa",
                          "dullGrey": "#b3b3b3",
                          "grey": "#dadada",
                          "highlights": "#8de2e0",
                          "hightlightsLight": "#bff4f2",
                          "hightlightsLighter": "#e8f7f7",
                          "lightGrey": "#f4f5f6",
                          "lighterGrey": "#eeeeee",
                          "mediumDarkGrey": "#888888",
                          "mediumGrey": "#3c3c3c",
                          "mediumLightGrey": "#666666",
                          "primary": "#ee0000",
                          "primaryDark": "#ba0000",
                          "transparent": "transparent",
                          "warnings": "#ed710b",
                          "white": "#fff",
                        },
                        "fontFamily": Object {
                          "main": "\\"Ciutadella\\", sans-serif",
                        },
                        "fontSize": Object {
                          "body": "1.125rem",
                          "button": "1rem",
                          "label": "1rem",
                          "labelLarge": "1.375rem",
                          "large": "2.25rem",
                          "medium": "1.625rem",
                          "small": "0.625rem",
                        },
                        "fontWeight": Object {
                          "bold": 700,
                          "regular": 400,
                        },
                        "highlightInvalidField": Object {
                          "border": "solid 2px #ed710b",
                          "borderRadius": "2px",
                        },
                        "layout": Object {
                          "borderRadius": "4px",
                          "containerMaxWidth": "1000px",
                          "gutter": "15px",
                          "iconSize": "32px",
                          "links": Object {
                            "gutter": "10px",
                          },
                          "paddingContainerMaxWidth": "1030px",
                        },
                        "letterSpacing": Object {
                          "small": "-0.0625rem",
                        },
                        "mq": Object {
                          "extraLarge": "@media only screen and (min-width: 1200px)",
                          "large": "@media only screen and (min-width: 960px)",
                          "medium": "@media only screen and (min-width: 768px)",
                          "small": "@media only screen and (min-width: 321px)",
                        },
                      }
                    }
                    themeStyles={
                      Object {
                        "button": [Function],
                      }
                    }
                    type="button"
                  >
                    <button
                      className="emotion-8"
                      cssOverrides={
                        Array [
                          Object {
                            "borderRadius": "4px",
                            "borderWidth": "0",
                            "fontWeight": 400,
                            "height": "48px",
                            "letterSpacing": "1.5px",
                            "padding": "0 0 0 1px",
                            "width": "100px",
                          },
                        ]
                      }
                      disabled={false}
                      inline={false}
                      label="CONFIRM"
                      onClick={[Function]}
                      type="button"
                    >
                      button
                    </button>
                  </ThemedButton>
                </WithTheme(ThemedButton)>
              </ButtonSolid>
            </div>
          </div>
        </div>
      </Transition>
    </Footer>
  </ThemeProvider>
</RunwayThemeProvider>
`;

exports[`Footer renders with defaults 1`] = `
<Transition
  appear={false}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={false}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={300}
  unmountOnExit={false}
>
  <Component />
</Transition>
`;

exports[`Footer renders with props provided 1`] = `
<Transition
  appear={false}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={false}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={300}
  unmountOnExit={false}
>
  <Component />
</Transition>
`;
